--- a/reponsive.css
+++ b/reponsive.css
@@ -1,11 +1,21 @@
 @media screen and (max-width: 911px) {
-  header .full-body,
-  ul {
+  header .full-body ul {
     display: none;
     flex-direction: column;
     align-items: start;
   }
   html {
     font-size: 40%;
+  }
+}
+@media screen and (max-width: 600px) {
+  #class-stars .slider {
+    min-height: 66rem;
+  }
+}
+
+@media screen and (max-width: 564px) {
+  #class-stars .slider {
+    min-height: 101rem;
   }
 }
