--- a/style.css
+++ b/style.css
@@ -42,8 +42,9 @@ body {
   margin: 0% auto;
   max-width: 151.9rem;
   background-image: url(images/new-amp-page-bg.jpg);
+  background-size: cover;
   background-repeat: repeat-y;
-  height: 700rem;
+  height: 900rem;
 }
 main > div {
   padding: 6rem 0;
@@ -778,18 +779,20 @@ main .home h3 {
   text-align: center;
   width: 100%;
 }
-#class-stars ul {
+#class-stars ul.dots {
   display: flex;
   justify-content: center;
   font-size: 1.8rem;
   font-weight: 600;
   gap: 1.5rem;
 }
-#class-stars ul li {
+#class-stars ul.dots li {
+  text-align: center;
   padding: 0 1rem;
   position: relative;
+  cursor: pointer;
 }
-#class-stars ul li.active::after {
+#class-stars ul li::after {
   content: "";
   width: 100%;
   height: 3px;
@@ -797,17 +800,121 @@ main .home h3 {
   position: absolute;
   bottom: -1rem;
   left: 0;
+  transform: scaleX(0);
+  transition: 1s;
+}
+#class-stars ul li.active::after {
+  transform: scaleX(1);
 }
 #class-stars .slider {
-  background-color: #e7e7e770;
-  margin-top: 5rem;
-  border-radius: 1.5rem;
+  margin-top: 3rem;
   background-size: cover;
-  height: 50rem;
   gap: 1rem;
 }
 #class-stars .item {
+  width: 100%;
+  min-height: 50rem;
   display: grid;
-  grid-template-columns: auto auto;
-  z-index: 5;
+  gap: 1rem;
+  grid-template-columns: repeat(2, 1fr);
+  grid-template-columns: repeat(auto-fit, minmax(40rem, 1fr));
 }
+#class-stars .item div {
+  border-radius: 1.5rem;
+}
+#class-stars .item div.information {
+  background-image: url(images/Stellar-classification/background.jpg);
+  background-size: 199%;
+  background-position-y: 30%;
+}
+#class-stars .item div.ex {
+  width: 100%;
+  height: 100%;
+  gap: 1rem;
+  display: grid;
+  grid-template-rows: auto auto;
+}
+#class-stars .item div.ex > div {
+  background-image: url(images/Stellar-classification/background.jpg);
+  background-size: 199%;
+}
+#class-stars .item div.ex > div:first-child {
+  background-position-x: 100%;
+  background-position-y: 9%;
+}
+#class-stars .item div.ex > div:last-child {
+  background-position-x: 100%;
+  background-position-y: 80%;
+}
+#class-stars .item .title {
+  height: 100%;
+  padding: 4rem;
+  color: #ffffff;
+  background: linear-gradient(25.99deg, #000 0, #0000 69.04%);
+  align-items: center;
+  box-sizing: border-box;
+}
+#class-stars .item .title h2 {
+  font-family: "Big Shoulders Text", sans-serif;
+  font-size: 3rem;
+  font-weight: bold;
+  margin-bottom: 10rem;
+}
+#class-stars .item .title li {
+  font-size: 2rem;
+  margin-bottom: 2.5rem;
+}
+#class-stars .item div.ex .title {
+  background: linear-gradient(25.99deg, #000 0, #0000 49.04%);
+}
+#class-stars .item div.in-ex .title {
+  display: flex;
+  justify-content: space-between;
+  gap: 0.5rem;
+  padding: 2rem;
+}
+#class-stars .item div.in-ex img {
+  width: 19rem;
+  height: 19rem;
+  object-fit: cover;
+  border-radius: 15px;
+}
+#class-stars .item div.in-ex .title li {
+  font-size: 1.4rem;
+  margin-bottom: 1rem;
+  text-align: justify;
+}
+#class-stars .item div.in-ex .title h2 {
+  text-align: center;
+  margin-bottom: 2rem;
+}
+#class-stars .slider {
+  min-height: 60rem;
+  position: relative;
+}
+#class-stars .slider .list .item.active {
+  display: grid;
+  opacity: 1;
+  transform: scale(1);
+  z-index: 1;
+  bottom: 0;
+}
+#class-stars .slider .list .item {
+  bottom: -100%;
+  box-sizing: border-box;
+  padding: 1rem;
+  border-radius: 1.5rem;
+  transform: scale(0.7);
+  opacity: 0;
+  transition: 1s;
+  position: absolute;
+  box-shadow: 0 0 35px black;
+}
+/* #class-stars .slider .list {
+  position: absolute;
+  display: flex;
+}
+#class-stars .slider .list .item {
+  animation: alternate-reverse;
+  width: 100%;
+} */
