--- a/css/reponsive.css
+++ b/css/reponsive.css
@@ -24,10 +24,7 @@
     display: none;
   }
   header #check-bars:checked + nav .main-menu {
-    /* height: 100vh; */
-    padding-top: 10px;
-    padding-left: 20px;
-    width: 60%;
+    transform: translate(0);
   }
   .main-menu {
     z-index: 0;
@@ -52,16 +49,19 @@
     height: 100%;
     margin: 0;
   }
-  header .full-body ul {
+  header .full-body .center > ul {
     position: absolute;
     top: 100%;
     display: block;
     flex-direction: column;
     align-items: start;
-    width: 0;
+    width: 60%;
     height: 100vh;
     overflow: hidden;
     background-color: rgb(15, 9, 29);
+    padding-top: 10px;
+    padding-left: 20px;
+    transform: translateX(-100%);
   }
   header .full-body ul li:first-child .navigation {
     background-color: rgb(65, 65, 66);
@@ -72,7 +72,6 @@
   }
   header .full-body ul p {
     font-size: 3rem;
-    display: inline-block;
   }
   header .fa-solid::before {
     font-size: 4rem;
@@ -84,6 +83,9 @@
     box-sizing: border-box;
     padding-top: 0;
     height: 0rem;
+    display: flex;
+    flex-direction: column;
+    gap: 4rem;
   }
   header .center li:hover ul {
     height: 0rem;
@@ -100,21 +102,35 @@
     font-weight: 600;
     font-size: 3rem;
     padding: 0 15px;
-    display: block;
     padding: 1.5rem 0;
     width: 100%;
     margin: 0;
+    display: flex;
+    justify-content: space-between;
+  }
+  header .center label span {
+    margin-right: 2rem;
+    font-size: 4rem;
   }
   header .center li ul li {
-    height: 2.5rem;
+    height: 2rem;
     background-color: #ffffff00;
     padding: 0.5rem 1rem 0.1rem 1rem;
     transition: 0.5s;
     box-sizing: border-box;
     padding-right: 2rem;
+    width: 30rem;
   }
-  header .center li input:checked + ul {
-    height: 19rem;
+  header .center li ul li a {
+    font-size: 3rem;
+  }
+  header .center li input:checked + ul.bk {
+    height: 29rem;
+    padding-left: 2rem;
+  }
+  header .center li input:checked + ul.tt {
+    height: 22rem;
+    padding-left: 2rem;
   }
   header .center li input {
     float: right;
